--- a/index.html
+++ b/index.html
@@ -248,9 +248,7 @@ footer {
         
         "assets/images/IMG_9344.JPEG",
         "assets/images/IMG_9354.JPEG",
-        "assets/images/IMG_9625.JPEG",
-
-        "assets/videos/IMG_6524"  // Añade más imágenes aquí
+        "assets/images/IMG_9625.JPEG"
     ];
     let fotoActual = 0;
 
