--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ footer {
         "assets/images/IMG_8347.JPEG",
         "assets/images/IMG_8367.JPEG",
         "assets/images/IMG_8485.JPEG",
-        "assets/images/IMG_8585.JPEG",
+        "assets/images/IMG_8585.PNG",
         "assets/images/IMG_8958.JPEG",
         "assets/images/IMG_9330.JPEG",
         "assets/images/IMG_9344.JPEG",  
