--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ footer {
 </body>
 <script>
     const fotos = [
+        "assets/images/IMG_5921.JPEG",
         "assets/images/IMG_6559.PNG",
         "assets/images/IMG_6566.JPEG",
         "assets/images/IMG_6601.JPEG",
